# SFML_project_1

./: CMakeLists.txt
header/: Game.h  UI.h  UIEInteractable.h  UIElement.h  apple.h  grid.h  snake.h  stdafx.h
src/: Game.cpp  UI.cpp  UIEInteractable.cpp  UIElement.cpp  apple.cpp  grid.cpp  main.cpp  snake.cpp
